# src/controllers/video.ts
@@ -1,3 +1,4 @@
+import { DeleteVideoRequest, EditVideoRequest } from './../types/videoServiceType';
 import {
   Post,
   Route,
@@ -9,6 +10,9 @@ import {
   Get,
   Path,
   Query,
+  Body,
+  Delete,
+  Put,
 } from 'tsoa'
 import { AuthenticationType } from '../const/AuthenticationType'
 import { VideoUploaded } from '../protos/video/VideoUploaded'
@@ -18,6 +22,9 @@ import { Request as ExpressRequest } from 'express'
 import BadRequestError from '../errors/BadRequestError'
 import { Types } from 'mongoose'
 import { isUUID } from '../utils/uuidValidator'
+import { VideoStatusRequest } from '../types/videoServiceType'
+import { VideoStatusResponse } from '../protos/video/VideoStatusResponse'
+import InternalServerError from '../errors/InternalServerError'
 
 @Tags('video')
 @Route('videos')
@@ -27,14 +34,19 @@ export class videoController {
   public async uploadVideo(
     @FormField() title: string,
     @FormField() description: string,
+    @FormField() permission: string,
     @UploadedFile() video: Express.Multer.File,
     @Request() request: ExpressRequest
   ): Promise<VideoUploadResponse> {
+    if (!["public", "private"].includes(permission)){
+      throw new BadRequestError('Please check permission of video')
+    }
     const data = await videoService.uploadVideo(
       title,
       description,
       video,
-      request.user!.user!.uid
+      request.user!.user!.uid,
+      permission
     )
     return data
   }
@@ -74,4 +86,66 @@ export class videoController {
     )
     return results
   }
+
+  @Post("/video/status")
+  public async updateVideoStatus(
+    @Body() body: VideoStatusRequest
+  ): Promise<VideoStatusResponse>{
+    if (body.videoId && !Types.ObjectId.isValid(body.videoId)) {
+      throw new BadRequestError('video id must in form object id')
+    }
+    if (!(body.status == "uploaded" || body.status == "failed" || body.status == "processing")) {
+      throw new BadRequestError('please check status input')
+    }
+
+    const results = await videoService.updateVideoStatus(
+      body.videoId,
+      body.status
+    )
+    if (results.result != "completed"){
+      throw new InternalServerError("Some operation failed")
+    }
+    return results
+  }
+  @Security(AuthenticationType.JWT, ['BASIC'])
+  @Put('/video/edit')
+  public async editVideo(@Body() body: EditVideoRequest){
+    if (body.videoId && !Types.ObjectId.isValid(body.videoId)) {
+      throw new BadRequestError('video id must in form object id')
+    }
+    if (!["public", "private"].includes(body.permission)){
+      throw new BadRequestError('Please check permission')
+    }
+    if (!body.title || !body.description){
+      throw new BadRequestError("Title or Description cannot be null or empty")
+    }
+
+    const results = await videoService.editVideo(
+      body.videoId,
+      body.title,
+      body.description,
+      body.permission
+    )
+
+    return results
+  }
+
+  @Security(AuthenticationType.JWT, ['BASIC'])
+  @Delete('/video/delete')
+  public async deleteVideo(
+    @Body() body: DeleteVideoRequest,
+    @Request() request: ExpressRequest){
+    if (body.videoId && !Types.ObjectId.isValid(body.videoId)) {
+      throw new BadRequestError('video id must in form object id')
+    }
+    const results = await videoService.deleteVideo(
+      body.videoId,
+      request.user?.user?.uid!
+    )
+    if (results.result != "deleted"){
+      throw new InternalServerError("Some operation failed")
+    }
+    return results
+  }
 }
+
