# src/protos/video/VideoStatusRequest.ts
@@ -1,0 +1,14 @@
+// Original file: src/protos/video.proto
+
+
+export interface VideoStatusRequest {
+  'id'?: (string);
+  'uid'?: (string);
+  'status'?: (string);
+}
+
+export interface VideoStatusRequest__Output {
+  'id'?: (string);
+  'uid'?: (string);
+  'status'?: (string);
+}
