# src/protos/video/VideoStatusResponse.ts
@@ -1,0 +1,10 @@
+// Original file: src/protos/video.proto
+
+
+export interface VideoStatusResponse {
+  'result'?: (string);
+}
+
+export interface VideoStatusResponse__Output {
+  'result'?: (string);
+}
